--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,10 +1,10 @@
 <table>
   <tr *ngFor="let row of board">
     <td *ngFor="let cell of row">
-      <div *ngIf="cell.getIsBlack()">
+      <div *ngIf="cell.getColor() == 0">
         <div class="cell-black"></div>
       </div>
-      <div *ngIf="!cell.getIsBlack()">
+      <div *ngIf="cell.getColor() == 1">
         <div class="cell-white"></div>
       </div>
     </td>
